--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --sec-blue: hsl(238, 22%, 44%);
 
   /* Accent */
+  --tertiary-blue_hover: hsla(224, 93%, 58%, 0.827);
   --tertiary-blue: hsl(224, 93%, 58%);
   --mid-blue: hsl(170, 45%, 43%);
 
@@ -18,14 +19,25 @@
 
   /* Font Size */
   --body-ff: 16px;
+
+  /* Font Family */
+  --raleway: "Raleway", sans-serif;
+  --open-sans: "Open Sans", sans-serif;
 }
 /* Variables */
 
 /* Body & Utilities */
 body {
-  font-family: "Open Sans", sans-serif;
-  padding: 2rem 4rem;
+  font-family: var(--open-sans);
   overflow-x: hidden;
+}
+
+.container_pad {
+  padding: 1.8rem 4rem;
+}
+
+.container_pad_2 {
+  padding: 0rem 4rem;
 }
 /* Body & Utilities */
 
@@ -34,7 +46,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Raleway", sans-serif;
+  font-family: var(--raleway);
   padding: 15px 0px;
   margin-bottom: 4rem;
 }
@@ -58,10 +70,183 @@ nav ul li:hover {
   text-underline-offset: 3px;
 }
 
-main {
+/* Nav Section */
+
+/* Main + Hero Section */
+
+main .hero {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
-.hero {
+main .hero .hero_details {
+  flex-direction: column;
   display: flex;
+  align-items: start;
+  justify-content: start;
+  color: var(--primary-blue);
+  padding-top: 3.5rem;
 }
-/* Nav Section */
+
+main .hero .hero_details h1 {
+  line-height: 1.4;
+  font-weight: 800;
+  font-family: var(--raleway);
+  font-size: 32px;
+  margin-bottom: 18px;
+}
+
+main .hero .hero_details p {
+  line-height: 1.6;
+  width: 83%;
+  margin-bottom: 25px;
+}
+
+main .hero .hero_details form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  width: 80%;
+}
+
+main .hero .hero_details form input,
+main .hero .hero_details form button {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+main .hero .hero_details form input {
+  width: 68%;
+  padding: 9px;
+  border: 1px solid var(--primary-blue);
+  color: var(--primary-blue);
+  border-radius: 3px;
+}
+
+main .hero .hero_details form input:active,
+main .hero .hero_details form input:focus {
+  outline: none;
+}
+
+main .hero .hero_details form input::placeholder {
+  font-size: 15px;
+}
+
+main .hero .hero_details form button {
+  width: 30%;
+  font-size: 15px;
+  background-color: var(--tertiary-blue);
+  color: var(--lightest-grey-blue);
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  padding: 12px 10px;
+}
+
+main .hero .hero_details form button:hover {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0 1), 0 3px 6px rgba(0, 0, 0, 0.08);
+  background-color: var(--tertiary-blue_hover);
+}
+
+/* Main + Hero Section */
+
+/* Social Prove Section */
+.social_prove {
+  background-image: url(./images/bg-curve-desktop.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.social_prove_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  color: var(--primary-blue);
+}
+
+.social_prove_writeup .social_prove_details {
+  margin-bottom: 48px;
+}
+
+.social_prove_writeup .social_prove_details h2 {
+  line-height: 1.4;
+  font-weight: 800;
+  font-family: var(--raleway);
+  font-size: 32px;
+  margin-bottom: 32px;
+}
+
+.social_prove_writeup .social_prove_details p {
+  margin-bottom: 18px;
+  width: 98%;
+  line-height: 1.6;
+}
+
+.social_prove_writeup .social_prove_details span {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 6px;
+  color: var(--mid-blue);
+}
+
+.social_prove_writeup .social_prove_details span a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.social_prove_writeup .social_prove_details span a:hover {
+  text-decoration: underline;
+  text-underline-offset: 7px;
+  transition: all 0.2s ease-in;
+}
+
+.social_prove_sub {
+  font-size: 95%;
+  width: 80%;
+  height: auto;
+  box-shadow: 0px 0px 20px 1px #01010a64;
+  padding: 35px;
+  background-color: #fff;
+  border-radius: 8px;
+  color: var(--primary-blue);
+}
+
+.social_prove_sub p {
+  line-height: 1.6;
+  margin-top: 9px;
+}
+
+.social_prove_sub .profile {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 15px;
+  gap: 0.8rem;
+}
+
+.social_prove_sub .profile img {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+}
+
+.social_prove_sub .profile_details {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.social_prove_sub .profile_details span:nth-child(1) {
+  font-weight: 800;
+}
+/* Social Prove Section */
